# vines-thermal

./: LICENSE  README.md  pyproject.toml
nb/: filter function.ipynb  optuna.ipynb  pixel-profiles.ipynb  work.ipynb
src/vinesthermal/: __init__.py  dataset.py  loss.py  training.py  unet.py
